[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Anubhavgupta14",email = "anubhavgu2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "fastapi[all] (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "playwright (>=1.54.0,<2.0.0)",
    "aiortc (>=1.13.0,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
